+ Panels choose vbox / vframe wrapper depending on if the panel is sized or should fill its container + Panels drop any problematic padding prop + Panel header text doesn't wrap + Fixed login panel layout

--- a/cmp/panel/impl/PanelHeader.scss
+++ b/cmp/panel/impl/PanelHeader.scss
@@ -7,6 +7,8 @@
 
   .xh-panel-header-title {
     font-size: var(--xh-title-font-size-px);
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   & > .svg-inline--fa {
